# car_sales_negotiator

./: .gitignore  README.md  pyproject.toml
app/: Home.py  _auth.py
app/pages/: 0_Login.py  1_Run_Sim.py  2_Replay.py  3_Billing.py  3_Manager_Reports.py
car_sales_negotiator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/car_sales_pack/: budgets_max_otd.json  credit_bands.json  dealbreakers.json  down_payments.json  good_exit_paths.json  must_have_features.json  negotiation_tactics.json  objection_styles.json  payment_targets_monthly.json  trade_in_status.json  trust_baselines.json  urgency_levels.json
engine/: buyer_profile.py  conversation.py  conversation_runner.py  llm_client.py  reference_selector.py  scoring.py  storage.py  utils.py
